[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/icecubes.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[node name="Panel" type="Panel"]
editor/display_folded = true
margin_top = -3.0
margin_right = 1025.0
margin_bottom = 596.0
script = ExtResource( 1 )

[node name="btSimpleSpriteDemo" type="Button" parent="."]
margin_left = 491.0
margin_top = 89.0
margin_right = 755.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="btSimpleSpriteDemo"]
margin_left = 27.0
margin_top = 12.0
margin_right = 251.0
margin_bottom = 39.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Simple sprite movement"

[node name="btnSvgSpritesDemo" type="Button" parent="."]
margin_left = 490.0
margin_top = 148.0
margin_right = 754.0
margin_bottom = 199.0

[node name="Label" type="Label" parent="btnSvgSpritesDemo"]
margin_left = 27.0
margin_top = 12.0
margin_right = 251.0
margin_bottom = 39.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "SVG Sprites"

[node name="btPhysics" type="Button" parent="."]
editor/display_folded = true
margin_left = 491.0
margin_top = 207.0
margin_right = 755.0
margin_bottom = 258.0

[node name="Label" type="Label" parent="btPhysics"]
margin_left = 27.0
margin_top = 12.0
margin_right = 251.0
margin_bottom = 39.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Physics"

[node name="btTileMap" type="Button" parent="."]
editor/display_folded = true
margin_left = 491.0
margin_top = 268.0
margin_right = 755.0
margin_bottom = 319.0

[node name="Label" type="Label" parent="btTileMap"]
margin_left = 27.0
margin_top = 12.0
margin_right = 251.0
margin_bottom = 39.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Tile map"

[node name="btStarRaiders" type="Button" parent="."]
margin_left = 490.0
margin_top = 330.0
margin_right = 754.0
margin_bottom = 381.0

[node name="Label" type="Label" parent="btStarRaiders"]
margin_left = 27.0
margin_top = 13.0
margin_right = 251.0
margin_bottom = 40.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Star Raiders"

[node name="btShaderTest" type="Button" parent="."]
margin_left = 489.0
margin_top = 393.0
margin_right = 753.0
margin_bottom = 444.0

[node name="Label" type="Label" parent="btShaderTest"]
margin_left = 27.0
margin_top = 13.0
margin_right = 251.0
margin_bottom = 40.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Shader test"

[node name="btSimple3D" type="Button" parent="."]
margin_left = 489.0
margin_top = 456.0
margin_right = 753.0
margin_bottom = 507.0

[node name="Label" type="Label" parent="btSimple3D"]
margin_left = 27.0
margin_top = 13.0
margin_right = 251.0
margin_bottom = 40.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Simple 3D animation"

[node name="icecubes" type="Sprite" parent="."]
position = Vector2( 238.762, 212.056 )
texture = ExtResource( 3 )

[connection signal="pressed" from="btSimpleSpriteDemo" to="." method="_on_btSimpleSpriteDemo_pressed"]
[connection signal="pressed" from="btnSvgSpritesDemo" to="." method="_on_btnSvgSpritesDemo_pressed"]
[connection signal="pressed" from="btPhysics" to="." method="_on_btPhysics_pressed"]
[connection signal="pressed" from="btTileMap" to="." method="_on_btTileMap_pressed"]
[connection signal="pressed" from="btStarRaiders" to="." method="_on_btStarRaiders_pressed"]
[connection signal="pressed" from="btShaderTest" to="." method="_on_btShaderTest_pressed"]
[connection signal="pressed" from="btSimple3D" to="." method="_on_btSimple3D_pressed"]
